--- a/CSS/CLASSWORK/kbacourses/stylecss/style.css
+++ b/CSS/CLASSWORK/kbacourses/stylecss/style.css
@@ -109,12 +109,14 @@ input[type=text],select{
  li{
     list-style: none;
     display: inline-block;
-    color: #800080;
     font-size: 16px;
  }
  li a{ 
     font-family: bold;
     margin-right: 25px;
+    color: #800080;
+    font-size: 16px;
+    text-decoration: none;
  }
 
  .add-course{
