--- a/CSS/CLASSWORK/stylecss/style.css
+++ b/CSS/CLASSWORK/stylecss/style.css
@@ -4,7 +4,6 @@
     width: 33%;
     border-left: 10px green solid;
     border-width: 1px;
-    
-    
-   
+    text-align: justify;
+    margin-left: 5px;
 }
