--- a/CSS/CLASSWORK/kbacourses/stylecss/style.css
+++ b/CSS/CLASSWORK/kbacourses/stylecss/style.css
@@ -245,4 +245,44 @@ input[type=text],select{
     border: none;
     display: inline;
 }
+.contact{
+    margin-top: 50px;
+}
+.contact h2{
+    text-align: center;
+}
+.contact p{
+    text-align: center;
+}
+.details{
+    float: left;
+    width: 100px;
+    border-width: 1px;
+    display: flex;
+    padding: 1px;
 
+}
+ .details img{
+    margin-left: 150px;
+    margin-right: 70px;
+    margin-top: 100px;
+    align-items: center;
+    padding-right: 50px;
+    
+}
+.details1 h3{
+    text-align: center;
+    margin-left: 20px;
+}
+.details1 {
+    float: right;
+    margin-left: 200px;
+    
+}
+.details1 p{
+         text-align: center;
+}
+.details2{
+    text-align: center;
+    color: #710e71;
+}
