--- a/CSS/CLASSWORK/kbacourses/stylecss/style.css
+++ b/CSS/CLASSWORK/kbacourses/stylecss/style.css
@@ -98,6 +98,12 @@ input[type=text],select{
     
 
 }
+.navbar li a:hover{
+    background-color:#92da91 ;
+    padding: 5px;
+    border-radius: 5px;
+    
+}
 .navdiv{
     display: flex;align-items: center;justify-content: space-between;
 }
