--- a/CSS/CLASSWORK/kbacourses/stylecss/style.css
+++ b/CSS/CLASSWORK/kbacourses/stylecss/style.css
@@ -99,7 +99,7 @@ input[type=text],select{
 
 }
 .navbar li a:hover{
-    background-color:#92da91 ;
+    background-color:#ade3e1 ;
     padding: 5px;
     border-radius: 5px;
     
