--- a/CSS/ASSIGNMENTS/LMS/styles/addbook.css
+++ b/CSS/ASSIGNMENTS/LMS/styles/addbook.css
@@ -2,47 +2,45 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    /* background: url(/CSS/ASSIGNMENTS/LMS/library.jpeg);
-    background-size: cover;  */
 }
 .navbar{
-        background:white ;
-        width: 98%;
-        margin-top: 0%;
-        height: 90px;
-        padding: 10px 20px 10px 20px;
-        display:grid;
-        justify-content: right;
-        
+    background:white ;
+    width: 98%;
+    margin-top: 0%;
+    height: 90px;
+    padding: 10px 20px 10px 20px;
+    display:grid;
+    justify-content: right;
     
-    }
-    .navbar li a:hover{
-        background-color:#ade3e1 ;
-        padding: 5px;
-        border-radius: 5px;
-        
-    }
+
+}
+.navbar li a:hover{
+    background-color:#ade3e1 ;
+    padding: 5px;
+    border-radius: 5px;
+    
+}
 li{
-    list-style: none;
-    display: inline-block;
-    font-size: 16px;
- }
- li a{ 
-    font-family: bold;
-    margin-right: 25px;
-    color: #800080;
-    font-size: 16px;
-    text-decoration: none;
- }
-.login-box{
-    width: 280px;
+list-style: none;
+display: inline-block;
+font-size: 16px;
+}
+li a{ 
+font-family: bold;
+margin-right: 25px;
+color: #800080;
+font-size: 16px;
+text-decoration: none;
+}
+.addbook{
+    width: 380px;
     position: absolute;
     top: 50%;
     left: 50%;
     color: black;
     transform: translate(-50%,-50%);
 }
-.login-box h1{
+.addbook h2{
     float: left;
     font-size: 40px;
     border-bottom: 6px solid #971369;
@@ -75,13 +73,4 @@ li{
     font-size: 18px;
     cursor: pointer;
     margin: 12px 0;
-}
-.part2{
-    text-align: center;
-    margin-top: 40px;
-    
-}
-.part2 a{
-    color: #800080;
-    text-decoration: none;
 }
