--- a/LIBRARY_MS/CSS/styles/home.css
+++ b/LIBRARY_MS/CSS/styles/home.css
@@ -38,7 +38,7 @@ li{
     width: 100%;
     height: 100vh;
     background-position: center;
-    background: url(/LIBRARY_MS/);
+    background: url();
  }
 .div2{
     width: 100%;
