--- a/ACTIVITY/JS/0310A9-PRACT.EXCS/MPM/styling.css
+++ b/ACTIVITY/JS/0310A9-PRACT.EXCS/MPM/styling.css
@@ -1,6 +1,40 @@
-ul{list-style-type: none;}
-li{margin: 10px 0;}
-.watched{text-decoration: line-through; color: gray;}
-.priority-high{color: rgb(83, 34, 106);}
-.priority-medium{color: rgb(150, 77, 133);}
-.priority-low{color: green;}
+body{
+    border: 2px solid black;
+    width: 600px;
+    padding: 50px;
+}
+ul{
+    list-style-type: none;
+}
+li{
+    margin: 10px 0;
+}
+
+.watched{
+    text-decoration: line-through;
+     color: gray;
+    }
+.priority-high{
+    color: rgb(83, 34, 106);
+}
+.priority-medium{
+    color: rgb(150, 77, 133);
+}
+.priority-low{
+    color: green;
+}
+sub{
+padding: 50px;
+}
+#movie{
+    margin-left: 200px;
+}
+#priority{
+    margin-left: 30px;
+}
+h1{
+    text-align: center;
+}
+button{
+    margin-left: 10px;
+}
